add a categories endpoint
