# main.go
@@ -83,6 +83,8 @@ func main() {
 
 	v1Router.Get("/currencies/", serverCfg.ListCurrencies)
 
+	v1Router.Get("/categories/", serverCfg.ListCategories)
+
 	v1Router.Get("/docs/*", httpSwagger.Handler(
 		httpSwagger.URL("http://localhost:8000/docs/swagger.yaml"), //The url pointing to API definition
 	))
